color and filter changes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
         <section class="task-list">
             <h2>Tasks</h2>
+            <div class="task-filters">
+                <button class="filter-btn active" data-filter="all">All Tasks</button>
+                <button class="filter-btn" data-filter="pending">Pending</button>
+                <button class="filter-btn" data-filter="completed">Completed</button>
+            </div>
             <ul id="taskList" aria-label="Task list"></ul>
         </section>
     </main>
